updated sql script for new table, updated openapi contract, added functional alerting for discord and tested
