# backend/src/main/java/com/logstream/enums/AlertDestinationType.java
@@ -1,0 +1,6 @@
+package com.logstream.enums;
+
+public enum AlertDestinationType {
+    DISCORD,
+    SLACK
+}
